--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1692,7 +1692,7 @@ display: block;
         width: 75%
     }
 .homePageCardInner img{
-    width: 100% !important;
+    width: 100% ;
 }
     :root {
         --card-height: 500px;
