--- a/src/app/teams/teams.css
+++ b/src/app/teams/teams.css
@@ -243,7 +243,9 @@ margin: 2rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
-
+.section3{
+  height: 50vh;
+}
 .section1{
   padding: 2rem !important;
 }
