--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2202,7 +2202,7 @@ display: block;
         height: 74vh
     }
 .homePageCardInner{
-    height: 50vh !important;
+    height: 55vh;
 }
     :root {
         --card-height: 320px;
@@ -2500,7 +2500,28 @@ display: block;
         text-align: left;
       } */
 }
-
+@media only screen and (min-width:341px) and (max-width: 390px)  {
+    .homePageCardInner{
+        height: 60vh;
+     
+    }
+    .teamsCardInner{
+        height: 105vh;
+    }
+    .left-col-banner a.basic-btn, a.black-btn{
+        font-size: 18px;
+    }
+  }
+  @media only screen and (max-width: 340px)  {
+    .homePageCardInner{
+        height: 95vh;
+        font-size: 15px;
+     
+    }
+    .left-col-banner a.basic-btn, a.black-btn{
+        font-size: 17px;
+    }
+  }
 footer {
     color: #fff;
     display: block;
