--- a/src/app/gift/gift.css
+++ b/src/app/gift/gift.css
@@ -27,16 +27,16 @@
   width: 100%;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   align-content: center;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 .giftsection {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-width: 100vw;
+width: 100%;
  
 }
 
@@ -63,7 +63,11 @@ section > h2.text-center {
   text-align: center;
 margin: 2rem 0 1em;
   color: #fff;
-  
+}
+.gifth2{
+  text-align: center;
+  margin: 2rem 0 1em;
+    color: #fff;
 }
 .ctaButton{
   display: flex;
@@ -126,6 +130,7 @@ margin: 2rem 0 1em;
   transition: all 0.5s ease-in;
 }
 
+
 .cta a.lightredCta:hover:before {
   left: 0;
 }
@@ -155,22 +160,6 @@ margin: 2rem 0 1em;
   animation: videoframe 0.9s ease-in 0.8s 1 normal;
   /* margin-top: 1px; */
 }
-
-
-
-.section1 {
-  margin: 3em 0 2em;
-}
-
-
-
-
-
-
-
-
-
-
   section h4 {
     font-size: 2.9rem;
     line-height: 1.2;
@@ -344,12 +333,9 @@ margin: 2rem 0 1em;
   .container1 h1 span {
     font-weight: 500;
   }
+
   
-  @media all and (max-width: 767px) {}
   
-  @media only screen and (min-width: 451px) and (max-width: 767px) {}
-  
-  @media all and (max-width: 450px) {}
   
   @media screen and (max-width: 1080px) {
     .leftSide {
@@ -451,7 +437,7 @@ margin: 2rem 0 1em;
   
   @media screen and (max-width: 767px) {
     .container1 {
-      width: 550px;
+    
       max-width: 100%;
     }
   
@@ -488,7 +474,10 @@ margin: 2rem 0 1em;
         margin: auto;
         opacity: 0.2;
       }
-    
+      .ctaButton a.lightredCtaButton{
+        width: 90%;
+        
+      }
       .section3 {
         padding: 0 0 0em;
       }
@@ -501,13 +490,15 @@ margin: 2rem 0 1em;
     
       .cardsBlks {
         flex-wrap: wrap;
-        max-width: 330px;
+        max-width: 100%;
+        padding: 1rem;
         margin: auto;
       }
     
       .cardsBlks .row {
         width: 100%;
         margin: 0 0 1.5em;
+        padding: 3rem;
       }
     
       .sectionClients {
@@ -528,12 +519,19 @@ margin: 2rem 0 1em;
       .pageBottom {
         margin: 0 0 0em;
       }
-    
+      .faqCss{
+        font-size: 50px !important; 
+        margin-bottom: 2rem !important;
+      }
       .section1 .leftSide .card {
         bottom: -25%;
         width: 200px;
         right: 16%;
       }
+      .text-center{
+        flex-direction: column;
+      }
+      
     }
     
     @media screen and (max-width: 550px) {
@@ -543,17 +541,41 @@ margin: 2rem 0 1em;
         max-height: calc(100vw / 1.3);
         background-size: 85% auto;
       }
-    
+      .text-center{
+        flex-direction: column;
+        font-size: 50px;
+      
+        line-height: 60px;
+      }
+      .ctaButton a.lightredCtaButton{
+        width: 90%;
+
+      }
+      section > h2.text-center{
+        margin: 1rem;
+      }
       .leftSide .video {
         width: 50%;
       }
-    
+      .cta a.lightredCta{
+        font-size: 35px;
+      }
       .leftSide .card {
         width: 46%;
       }
-    
-      .section1 {
-        margin: 1em 0 2em;
+      .giftsection {
+        flex-direction: column;
+        min-height: 140vh;
+      }
+      .giftImage img{
+        max-width: 100%;
+      }
+      .gifth2{
+        text-align: center;
+        /* margin-bottom: 4rem;  */
+          color: #fff;
+          font-size: 30px;
+          margin: 0 0 4rem;
       }
     
       section h2,
@@ -589,8 +611,8 @@ margin: 2rem 0 1em;
       }
     
       .section1 h2 {
-        font-size: 2rem;
-        margin-top: 4rem;
+        font-size: 45px;
+        margin-top: 1rem;
       }
     
       .section1 .leftSide .card {
@@ -604,6 +626,21 @@ margin: 2rem 0 1em;
       .sectionClients > h2 {
         max-width: 325px;
         margin: 0.8em auto
+      }
+      .giftsection {
+        flex-direction: column;
+        min-height: 140vh;
+      }
+      .giftImage img{
+        max-width: 100%;
+      }
+      .giftRightSide{
+        text-align: center;
+        width: 100%;
+      }
+      .giftRightSide h2{
+        font-size: 50px;
+        margin-bottom: 1rem;
       }
     }
     
